syntax = "proto3";

package ddz;

service DealCardService {
  rpc GetCard (DealCardRequest) returns (DealCardReply) {}
}

service TrustshipService{
  rpc Ship(TrustShipRequest) returns(PlayReply) {}
}

service RobotService{
  rpc Play(RobotRequest) returns(PlayReply) {}
  rpc CardAnalysis(HandCardAnalysisRequest)returns(HandCardAnalysisReply){}
}
service GameTableService{
  rpc Play(RobotRequest) returns(GameTableReply) {}
}
message BoolReply{
  bool result=1;
}

enum IDENTITY{
  LORD =0;
  FARMER1 =1;
  FARMER2 =2;
}

enum DEALCARD_TYPE{
  OPTIMIZED =0;
  SMOOTH =1;
}

message TrustShipRequest{
  int32 player_identity=1;
  bytes player_handcard=2;
  int32 last_identity=3;
  bytes last_playcard=4;
}

message RobotRequest{
  int32 playeridentity=1;
  bytes lord_handcard=2;
  bytes farmer1_handcard=3;
  bytes farmer2_handcard=4;
  int32 last_identity=5;
  bytes last_playcard=6;
  int32 last_cardstyle=7;
}
message CardStyle{
  int32 style=1;
  int32 min_val=2;
  int32 max_val=3;
  bytes extra=4;
}
message PlayReply{
  bytes handcard=1;
  CardStyle style=2;
}

message GameTableElement{
  int32 playeridentity=1;
  bytes lord_handcard=2;
  bytes farmer1_handcard=3;
  bytes farmer2_handcard=4;
  int32 last_identity=5;
  bytes last_playcard=6;
  bytes result=7;
}

message GameTableReply{
  repeated GameTableElement element=1;
}
message DealCardRequest {
  DEALCARD_TYPE type=1;
  bytes params=2;
}

message DealCardReply {
  bytes player0 = 1;
  bytes player1 = 2;
  bytes player2 = 3;
  bytes extra = 4;
}

message HandCardRequest{
  bytes cards = 1;
}

message HandCardAnalysisRequest{
  repeated HandCardRequest handcards=1;
}

message HandCardAnalysisResult{
  int32 power = 1;
  int32 min_step = 2;
  int32 min_step_without_boom=3;
  bytes singles = 4;
  bytes doubles = 5;
  bytes triples = 6;
  repeated CardStyle all_style = 7;
}

message HandCardAnalysisReply{
  repeated HandCardAnalysisResult results = 1;
}